media/filters/chunk_demuxer_unittest.cc
@@ -7,19 +7,20 @@
 #include <stddef.h>
 #include <stdint.h>
 #include <algorithm>
+#include <queue>
 #include <utility>
 
 #include "base/bind.h"
 #include "base/bind_helpers.h"
 #include "base/command_line.h"
 #include "base/macros.h"
-#include "base/message_loop/message_loop.h"
 #include "base/run_loop.h"
 #include "base/strings/string_number_conversions.h"
 #include "base/strings/string_split.h"
 #include "base/strings/string_util.h"
 #include "base/synchronization/waitable_event.h"
 #include "base/test/scoped_feature_list.h"
+#include "base/test/scoped_task_environment.h"
 #include "media/base/audio_decoder_config.h"
 #include "media/base/decoder_buffer.h"
 #include "media/base/decrypt_config.h"
@@ -208,6 +209,14 @@ class ChunkDemuxerTest : public ::testing::TestWithParam<BufferingApi> {
     CreateNewDemuxer();
   }
 
+  void ResetDemuxer(ChunkDemuxer* new_demuxer) {
+    if (demuxer_.get()) {
+      ChunkDemuxer::DestroyInBackground(demuxer_.release());
+      scoped_task_environment_.RunUntilIdle();
+    }
+    demuxer_.reset(new_demuxer);
+  }
+
   void CreateNewDemuxer() {
     base::Closure open_cb =
         base::Bind(&ChunkDemuxerTest::DemuxerOpened, base::Unretained(this));
@@ -217,12 +226,13 @@ class ChunkDemuxerTest : public ::testing::TestWithParam<BufferingApi> {
         &ChunkDemuxerTest::OnEncryptedMediaInitData, base::Unretained(this));
     EXPECT_MEDIA_LOG(
         BufferingByPtsDts(buffering_api_ == BufferingApi::kNewByPts));
-    demuxer_.reset(new ChunkDemuxer(open_cb, progress_cb,
-                                    encrypted_media_init_data_cb, &media_log_));
+    ResetDemuxer(new ChunkDemuxer(open_cb, progress_cb,
+                                  encrypted_media_init_data_cb, &media_log_));
   }
 
   virtual ~ChunkDemuxerTest() {
     ShutdownDemuxer();
+    ResetDemuxer(nullptr);
   }
 
   void CreateInitSegment(int stream_flags,
@@ -1335,9 +1345,10 @@ class ChunkDemuxerTest : public ::testing::TestWithParam<BufferingApi> {
     return true;
   }
 
+  base::test::ScopedTaskEnvironment scoped_task_environment_;
+
   StrictMock<MockMediaLog> media_log_;
 
-  base::MessageLoop message_loop_;
   MockDemuxerHost host_;
 
   std::unique_ptr<ChunkDemuxer> demuxer_;
@@ -1439,7 +1450,7 @@ TEST_P(ChunkDemuxerTest, Init) {
     }
 
     ShutdownDemuxer();
-    demuxer_.reset();
+    ResetDemuxer(nullptr);
   }
 }
 
@@ -1508,7 +1519,7 @@ TEST_P(ChunkDemuxerTest, InitText) {
     }
 
     ShutdownDemuxer();
-    demuxer_.reset();
+    ResetDemuxer(nullptr);
   }
 }
 
@@ -1932,7 +1943,7 @@ TEST_P(ChunkDemuxerTest, EndOfStreamWithNoAppend) {
   ShutdownDemuxer();
   CheckExpectedRanges("{ }");
   demuxer_->RemoveId(kSourceId);
-  demuxer_.reset();
+  ResetDemuxer(nullptr);
 }
 
 TEST_P(ChunkDemuxerTest, EndOfStreamWithNoMediaAppend) {
